--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,5 +1,6 @@
 .header {
-    height: 45px;
-    line-height: 45px;
-    border-bottom: 1px solid #ccc;
+    height: 56px;
+    line-height: 56px;
+    border-bottom: 1px solid #ddd;
+    padding-left: 24px;
 }
